<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="cat_food">Food</string>
    <string name="cat_grocery">Grocery</string>
    <string name="cat_gas">Gas</string>
    <string name="cat_other">Other</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_amount">Enter Expense Amount</string>
    <string name="total_expense_label">Total Expense</string>
    <string name="total_expense">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="expense_details">Expense Details</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="sure_to_delete_item">Are you sure to delete this item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
